--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "start": "node server.js"
   },
   "author": "Diogo Wernik",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-inline-css": "^0.1.5"
+    
+  }
 }
