--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "author": "Diogo Wernik",
   "license": "ISC",
   "devDependencies": {
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-inline-css": "^0.1.5"
-    
+    "del": "^2.1.0",
+    "gulp": "^3.9.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rev": "^6.0.1",
+    "gulp-uglify": "^1.5.1",
+    "gulp-usemin": "^0.3.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/diogowernik/caelum01_keep.git"
   }
 }
